--- a/index.html
+++ b/index.html
@@ -5,102 +5,98 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Memorama TikTok Online</title>
 
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js"></script>
+
 <style>
-body{
-    font-family: Arial;
-    text-align:center;
-    background:#f2f2f2;
-}
-
-#login{
-    margin-top:60px;
-}
-
-input{
-    padding:10px;
-    font-size:18px;
-}
-
-button{
-    padding:10px 20px;
-    font-size:18px;
-    cursor:pointer;
-}
-
-#juego{
-    display:none;
-    margin-top:20px;
-}
-
-.tablero{
-    display:grid;
-    grid-template-columns:repeat(4,80px);
-    gap:10px;
-    justify-content:center;
-}
-
-.carta{
-    width:80px;
-    height:80px;
-    background:#ff0050;
-    color:white;
-    font-size:30px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    cursor:pointer;
-}
+body{font-family:Arial;text-align:center;background:#f2f2f2;}
+input,button{padding:10px;font-size:18px;margin:5px;}
+.tablero{display:grid;grid-template-columns:repeat(4,80px);gap:10px;justify-content:center;margin-top:20px;}
+.carta{width:80px;height:80px;background:#ff0050;color:white;font-size:30px;display:flex;align-items:center;justify-content:center;cursor:pointer;}
 </style>
 </head>
-
 <body>
 
 <h1>Memorama TikTok Online</h1>
 
 <div id="login">
-    <input id="nombre" placeholder="Tu nombre">
-    <button onclick="entrar()">Entrar</button>
+<input id="nombre" placeholder="Tu nombre">
+<button onclick="entrar()">Entrar</button>
 </div>
 
-<div id="juego">
-    <h2 id="jugador"></h2>
-    <div class="tablero" id="tablero"></div>
-</div>
+<h2 id="jugador"></h2>
+<h3 id="turno"></h3>
+
+<div class="tablero" id="tablero"></div>
 
 <script>
+// 🔥 PEGA AQUÍ TU CONFIG FIREBASE
+const firebaseConfig = {
+apiKey: "TU_APIKEY",
+authDomain: "TU_DOMAIN",
+databaseURL: "TU_DB_URL",
+projectId: "TU_ID",
+storageBucket: "TU_BUCKET",
+messagingSenderId: "TU_MSG",
+appId: "TU_APP"
+};
+
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
+
+let jugador="";
+let turnoActual="";
+let cartas=[];
+
 function entrar(){
-    let nombre = document.getElementById("nombre").value;
-    if(nombre==""){
-        alert("Escribe tu nombre");
-        return;
-    }
+jugador=document.getElementById("nombre").value;
+if(jugador==""){alert("Escribe nombre");return;}
 
-    document.getElementById("login").style.display="none";
-    document.getElementById("juego").style.display="block";
-    document.getElementById("jugador").innerText="Jugador: "+nombre;
+document.getElementById("login").style.display="none";
+document.getElementById("jugador").innerText="Jugador: "+jugador;
 
-    iniciarJuego();
+unirseSala();
 }
 
-function iniciarJuego(){
-    let emojis=["🎵","🎵","🔥","🔥","💃","💃","😎","😎"];
-    emojis.sort(()=>Math.random()-0.5);
+function unirseSala(){
+db.ref("sala/jugadores/"+jugador).set(true);
 
-    let tablero=document.getElementById("tablero");
-    tablero.innerHTML="";
+db.ref("sala/cartas").once("value",snap=>{
+if(!snap.exists()){
+let emojis=["🎵","🎵","🔥","🔥","💃","💃","😎","😎"];
+emojis.sort(()=>Math.random()-0.5);
+db.ref("sala/cartas").set(emojis);
+}
+});
 
-    emojis.forEach(e=>{
-        let carta=document.createElement("div");
-        carta.className="carta";
-        carta.dataset.valor=e;
-        carta.innerText="?";
+db.ref("sala").on("value",snap=>{
+let data=snap.val();
+if(!data)return;
 
-        carta.onclick=function(){
-            this.innerText=this.dataset.valor;
-        };
+cartas=data.cartas;
+turnoActual=data.turno||jugador;
 
-        tablero.appendChild(carta);
-    });
+document.getElementById("turno").innerText="Turno: "+turnoActual;
+dibujar();
+});
+}
+
+function dibujar(){
+let tablero=document.getElementById("tablero");
+tablero.innerHTML="";
+
+cartas.forEach((e,i)=>{
+let c=document.createElement("div");
+c.className="carta";
+c.innerText="?";
+
+c.onclick=()=>{
+if(turnoActual!=jugador)return;
+c.innerText=e;
+};
+
+tablero.appendChild(c);
+});
 }
 </script>
 
